force-app/main/default/objects/Bot_Command__mdt/Bot_Command__mdt.object-meta.xml
<CustomObject>
    <description>The list of available bot commands.</description>
    <label>Bot Command</label>
    <pluralLabel>Bot Commands</pluralLabel>
</CustomObject>