force-app/main/default/objects/Bot_Command__mdt/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <description>The key word or command name.</description>
    <label>Command</label>
    <length>255</length>
    <type>Text</type>
</CustomField>