force-app/main/default/objects/Bot_Command__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the bot command or key word action.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>