force-app/main/default/objects/Bot_Command__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this command active at the moment?</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>