force-app/main/default/objects/Bot_Command__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>The name of the method to process the command.</description>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>