force-app/main/default/objects/Bot_Command__mdt/fields/Text_Command__c.field-meta.xml
<CustomField>
    <fullName>Text_Command__c</fullName>
    <description>The command without prefix &apos;/&apos;.</description>
    <label>Text Command</label>
    <length>255</length>
    <type>Text</type>
</CustomField>